# flutter_rust_ndk_app

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml  test.db
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/94218e2d0156029fb33758a507e99cf8/: .filecache  debug_bundle_linux-x64_assets.stamp  (+8 more)
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
android/: local.properties
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/utils/: colors.dart  constants.dart  persistence.dart  strings.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: mod.rs  model.rs  model_persistence.rs  simple.rs
rust_builder/: README.md  pubspec.yaml
rust_builder/.dart_tool/: package_config.json  package_config_subset
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_rust_ndk_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_rust_ndk_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+23 files in other folders)
