[package]
name = "rust_lib_flutter_rust_ndk_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.35"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["clock"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
